# utilities

./: CMakeLists.txt  README.md
configutil/: CMakeLists.txt
configutil/example/: main.cpp
configutil/include/: appconfig.h
configutil/src/: appconfig.cpp
ftputil/: README.md
ftputil/example/: main.cpp
ftputil/include/: ftp.h
ftputil/src/: ftp.cpp
kvutil/: CMakeLists.txt  README.md
kvutil/example/: main.cpp
kvutil/src/: value_reader.hpp
